# meo-ham-hoc-artifacts

./: .gitignore  README.md  build-zips.sh
c-thuc-chien-toolchain/01-hanh-trinh-bien-dich/: EXERCISE.md  hello.c  needs_math.c
c-thuc-chien-toolchain/02-thu-vien-lien-ket/: EXERCISE.md  main.c  util.c  util.h
c-thuc-chien-toolchain/03-make-build-graph/: EXERCISE.md  Makefile  main.c  util.h
c-thuc-chien-toolchain/04-cmake-meson/: CMakeLists.txt  EXERCISE.md  meson.build
c-thuc-chien-toolchain/04-cmake-meson/include/: util.h
c-thuc-chien-toolchain/04-cmake-meson/src/: main.c  util.c
c-thuc-chien-toolchain/05-clang-format/: EXERCISE.md  messy.c
c-thuc-chien-toolchain/06-clang-tidy/: .clang-tidy  EXERCISE.md  buggy.c
c-thuc-chien-toolchain/07-sanitizers/: EXERCISE.md  leak.c  overflow.c  uaf.c  ub.c
c-thuc-chien-toolchain/08-debug-test-ci/: CMakeLists.txt  EXERCISE.md  main.c  test_util.c  util.c  util.h
c-thuc-chien-toolchain/08-debug-test-ci/.github/workflows/: ci.yml
c-thuc-chien-toolchain/09-du-an-xuat-xuong/: .clang-format  .clang-tidy  CMakeLists.txt  EXERCISE.md
c-thuc-chien-toolchain/09-du-an-xuat-xuong/.github/workflows/: ci.yml
c-thuc-chien-toolchain/09-du-an-xuat-xuong/include/: task.h
c-thuc-chien-toolchain/09-du-an-xuat-xuong/src/: main.c  store.c
c-thuc-chien-toolchain/09-du-an-xuat-xuong/tests/: test_store.c
html/semantic-html-seo/: CHEATSHEET.md  README.md
html/semantic-html-seo/.claude/skills/semantic-html-seo/: SKILL.md
lap-trinh-c-co-ban/basic-binh-chon/: EXERCISE.md  Makefile  main.c
lap-trinh-c-co-ban/basic-chi-tieu/: EXERCISE.md  Makefile  main.c
lap-trinh-c-co-ban/basic-todo/: EXERCISE.md  Makefile  main.c
lap-trinh-c-nang-cao/capstone-binh-chon/: EXERCISE.md  Makefile  candidate.c  candidate.h  main.c
lap-trinh-c-nang-cao/capstone-chi-tieu/: EXERCISE.md  Makefile  expense.c  expense.h  main.c
lap-trinh-c-nang-cao/capstone-todo/: EXERCISE.md  Makefile
lap-trinh-c-nang-cao/test-integration/: CMakeLists.txt  EXERCISE.md
lap-trinh-c-nang-cao/test-integration/include/: task.h
lap-trinh-c-nang-cao/test-integration/src/: main.c  store.c
lap-trinh-c-nang-cao/test-integration/tests/: run_cli.sh  test.h  test_roundtrip.c
lap-trinh-c-nang-cao/test-unit/: CMakeLists.txt  EXERCISE.md
lap-trinh-c-nang-cao/test-unit/include/: stack.h
lap-trinh-c-nang-cao/test-unit/src/: stack.c
lap-trinh-c-nang-cao/test-unit/tests/: test_stack.c
vibe-coding-nextjs/vibe-ba-web-ban-hang/: BA-web-ban-hang.md
vibe-coding-nextjs/vibe-skills-subagents/: README.md
vibe-coding-nextjs/vibe-skills-subagents/.claude/agents/: kiem-a11y.md  ra-soat-bao-mat.md  ra-soat-giao-dien.md  toi-uu-seo.md
vibe-coding-nextjs/vibe-skills-subagents/.claude/skills/data-integrity/: SKILL.md
vibe-coding-nextjs/vibe-skills-subagents/.claude/skills/design-system/: SKILL.md
vibe-coding-nextjs/vibe-skills-subagents/.claude/skills/owasp/: SKILL.md
vibe-coding-nextjs/vibe-skills-subagents/.claude/skills/prettier/: SKILL.md
vibe-coding-nextjs/vibe-skills-subagents/.claude/skills/seo/: SKILL.md
vibe-coding-nextjs/vibe-skills-subagents/.claude/skills/shadcn-tailwind/: SKILL.md
vibe-coding-nextjs/vibe-skills-subagents/.claude/skills/wcag-a11y/: SKILL.md
